add schemas and refactor RegistrationTests