@@ -9,23 +9,26 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import static io.restassured.RestAssured.given;
+import static io.restassured.module.jsv.JsonSchemaValidator.matchesJsonSchemaInClasspath;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.notNullValue;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-public class RegistrationTests {
-  String url = "https://book-club.qa.guru/api/v1/users/register/";
+public class RegistrationTests extends TestBase{
+  String url = "/users/register/";
+  String basePath = "/api/v1";
   String username;
   String password;
-  RegistrationReqModel data;
+  RegistrationReqModel registrationData;
 
   @BeforeEach
   public void prepareTestData() {
     Faker faker = new Faker();
     username = faker.name().firstName();
     password = faker.name().firstName();
-    data = new RegistrationReqModel(username, password);
+    registrationData = new RegistrationReqModel(username, password);
   }
 
   @Test
@@ -33,18 +36,28 @@ public class RegistrationTests {
 
     RegistrationRespModel respModel = given()
             .log().all()
-            .body(data)
+            .body(registrationData)
             .contentType(ContentType.JSON)
+            .basePath(basePath)
             .when()
             .post(url)
             .then()
             .log().all()
             .statusCode(201)
+            .body(matchesJsonSchemaInClasspath("schemas/register/register_response_schemas.json"))
+            .body("id", notNullValue())
+            .body("username", notNullValue())
+            .body("remoteAddr", notNullValue())
             .extract().as(RegistrationRespModel.class);
-    assertEquals(username, respModel.username());
-    assertEquals("", respModel.firstName());
-    assertEquals("", respModel.lastName());
-    assertEquals("", respModel.email());
+
+    assertThat(respModel.username()).isEqualTo(username);
+    assertThat(respModel.id()).isGreaterThan(0);
+    assertThat(respModel.firstName()).isEmpty(); //isEqualTo("");
+    assertThat(respModel.lastName()).isEmpty();
+    assertThat(respModel.email()).isEmpty();
+
+    String ipRegex = "^((25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\\.){3}(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$";
+    assertThat(respModel.remoteAddr()).matches(ipRegex);
   }
 
   @Test
@@ -55,11 +68,13 @@ public class RegistrationTests {
             .log().all()
             .body(data)
             .contentType(ContentType.JSON)
+            .basePath(basePath)
             .when()
             .post(url)
             .then()
             .log().all()
             .statusCode(201)
+            .body(matchesJsonSchemaInClasspath("schemas/register/register_response_schemas.json"))
             .body("username", is(username))
             .body("id", notNullValue());
 
@@ -67,14 +82,18 @@ public class RegistrationTests {
             .log().all()
             .body(data)
             .contentType(ContentType.JSON)
+            .basePath(basePath)
             .when()
             .post(url)
             .then()
             .log().all()
             .statusCode(400)
+            .body(matchesJsonSchemaInClasspath("schemas/register/existin_user_response_schemas.json"))
             .extract().as(ExistingUser400RespModel.class);
+
     String expectedError = "A user with that username already exists.";
-    assertEquals(expectedError, resp.username().get(0));
+    String actualdError = resp.username().getFirst();
+    assertThat(actualdError).isEqualTo(expectedError);
   }
 
   @Test
@@ -87,11 +106,13 @@ public class RegistrationTests {
             .log().all()
             .body(data)
             .contentType(ContentType.JSON)
+            .basePath(basePath)
             .when()
             .post(url)
             .then()
             .log().all()
             .statusCode(400)
+            .body(matchesJsonSchemaInClasspath("schemas/register/invalid_user_response_schemas.json"))
             .body("username[0]", containsString("Enter a valid username."));
   }
 
@@ -104,6 +125,7 @@ public class RegistrationTests {
             .log().all()
             .body(data)
             .contentType("application/json")
+            .basePath(basePath)
             .when()
             .post(wrongUrl)
             .then()
@@ -118,6 +140,7 @@ public class RegistrationTests {
     given()
             .log().all()
             .body(data)
+            .basePath(basePath)
             .when()
             .post(url)
             .then()
